[package]
name = "ByteDetective"
version = "0.0.1"
description = "Find memories faster"
authors = ["Santosh Passoubady"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["clipboard-all", "dialog-message", "path-all", "process-command-api", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-bert = "0.19.0"
anyhow = "1.0.66"
redis = "0.23.0"
log = "0.4.17"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }


[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
